# CMakeList.txt : CMake project for cvicenia 13.10, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "cvicenia 13.10.cpp" "cvicenia 13.10.h")

# TODO: Add tests and install targets if needed.
